# Quick-OK-Base

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  base.h  filemapping.h  hi.cxx  hugepage.h  lazy_err_translator.h  memory.h  struct_oop_test.c  test.asm  test.c  test_exc.cpp  test_exc.h
algorithms/: algorithm.h  rand-unix.c  rand-win32.c  rand.h  sort.h  tinymt.h
base/: attribute.h  basic_class.h  bug.h  cm-config.h  debug.h  fastclac.h  platform.h  stat.h  test.c  types.h
cmake/: FindXOceanLib.cmake
container/: forward_list.h  list.h  queue.h
dynlib/: dynlib_error_handler_posix.c  dynlib_win32.h
fstream/: async_fstream.h  async_fstream_linux.h  falloc-linux.c  falloc_linux.c  fstream-posix.c  fstream-win32-impl.c  fstream-win32.c  fstream.h  fstream_base.h  fstream_posix.c  fstream_win32.c  ifstream.h  iofstream.h  prealloc.h
include/: abstract_file.h  atomic.h  base.h  condlock.h  dragonbox.h  dynlib.h  error_descriptor.h  error_handling.h  filesystem.h  fstream.h  intstr_conversion.h  memalloc.h  mmap.h  pfstream.h  process.h  semaphore.h  shared_memory.h  stringset.h  thread.h  thread_pool.h  user.h  win32spec.h  xocean.h
lock/: condlock.h  rwlock.h
memory/: memory_oper.h  mempool.h  memset_zero.c
mmap/: mmap-linux.c  mmap-win32.c  mmap.h
simd/: simd.h  v128.h  v256.h
sources/: intstr_conversion.c  static_string_pool.c
test/: test.c  test_read.cpp  test_sch  test_sch.cpp
thread/: thread-posix.c  thread-win32.c  thread.h
threadpool/: thread_pool.c  thread_pool.h
video/: LICENSE  canvas.h  encoder.c  encoder.h  hardware_encoder.c  (+1 more)
(+120 files in other folders)
